# GeotiffFactory

./: README.md
app/: CMakeLists.txt  build.gradle  geotiff.jks
app/src/androidTest/java/com/penck/geotiff/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/penck/geotiff/: MainActivity.java
app/src/main/java/org/beyka/tiffbitmapfactory/: TiffBitmapFactory.java  TiffConverter.java  TiffSaver.java
app/src/main/jni/: CMakeLists.txt  NativeDecoder.cpp  NativeDecoder.h  NativeTiffSaver.cpp  tiffio.h
app/src/main/jni/tiff/libtiff/: tif_open.c  tif_zip.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/penck/geotiff/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
